<resources>
    <string name="app_name" translatable="false">Inventory</string>
    <!--activity_catalog related strings-->
    <string name="image_for_empty_view">Image for empty view</string>
    <string name="empty_view_title_text">Inventory is empty</string>
    <string name="empty_view_subtitle_text">Add new inventory by pressing plus sign</string>
    <!--list_items related strings-->
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="product_in_stock">In stock:</string>
    <string name="product_price">Price:</string>
    <string name="product_sale">sell</string>
    <!--activity_detail related strings-->
    <string name="detail_product_name">Product Name</string>
    <string name="enter_the_product_name">Enter the product name</string>
    <string name="detail_product_price">Price</string>
    <string name="enter_the_product_price">Enter the price</string>
    <string name="detail_product_quantity">Quantity</string>
    <string name="detail_product_restock">Restock</string>
    <string name="detail_product_delete">Delete product</string>
    <string name="detail_product_save">Save edits</string>
    <string name="detail_product_image">Image</string>
    <string name="enter_the_product_quantity">Enter the quantity</string>
    <string name="enter_amount_to_restock">Enter the amount to restock</string>
    <string name="button_detail_minus_sign" translatable="false">-</string>
    <string name="button_detail_plus_sign" translatable="false">+</string>
    <string name="action_insert_product">Insert</string>
    <string name="action_delete_all_entries">Delete all</string>
    <string name="editor_activity_add_product">Add product</string>
    <string name="editor_activity_edit_product">Edit</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard your changes?</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="editor_acitivity_no_data_entered">No data entered</string>
    <string name="editor_activity_need_name">Product need name</string>
    <string name="editor_insert_product_failed">Insertion failed</string>
    <string name="editor_insert_product_successful">Insertion successful</string>
    <string name="editor_update_product_failed">Update failed</string>
    <string name="editor_update_product_successful">Update successful</string>
    <string name="action_save">Save</string>
    <string name="action_delete">delete</string>
    <string name="editor_activity_are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="editor_activity_yes">yes</string>
    <string name="editor_activity_cancel">Cancel</string>
    <string name="detail_product_order">Order</string>
    <string name="product_out_of_stock">Product is out-of-stock</string>
    <string name="item_sold">Item sold</string>
</resources>
